<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView style="@style/Heading" />

        <TextView
            style="@style/Question_Header"
            android:text="@string/Question_1_Heading" />

        <TextView
            style="@style/Question_Body"
            android:text="@string/Question_1_Body" />

        <CheckBox
            android:id="@+id/Java_Option"
            style="@style/Checkbox_Design"
            android:text="@string/Question_1_Checkbox_1" />

        <CheckBox
            android:id="@+id/Kotlin_Option"
            style="@style/Checkbox_Design"
            android:text="@string/Question_1_Checkbox_2" />

        <CheckBox
            android:id="@+id/C_Sharp_Option"
            style="@style/Checkbox_Design"
            android:text="@string/Question_1_Checkbox_3" />

        <CheckBox
            android:id="@+id/Python_Option"
            style="@style/Checkbox_Design"
            android:layout_marginBottom="16dp"
            android:text="@string/Question_1_Checkbox_4" />

        <TextView
            android:id="@+id/Answer_1"
            style="@style/Answer_Text"
            />

        <TextView
            style="@style/Question_Header"
            android:text="@string/Question_2_Heading" />

        <TextView
            style="@style/Question_Body"
            android:text="@string/Question_2_Body" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/True_Option"
                style="@style/Radio_Button_Design"
                android:text="@string/Question_2_RadioButton_1" />

            <RadioButton
                android:id="@+id/False_Option"
                style="@style/Radio_Button_Design"
                android:layout_marginBottom="16dp"
                android:text="@string/Question_2_RadioButton_2" />
        </RadioGroup>

        <TextView
            android:id="@+id/Answer_2"
            style="@style/Answer_Text"
            />

        <TextView
            style="@style/Question_Header"
            android:text="@string/Question_3_Heading" />

        <TextView
            style="@style/Question_Body"
            android:layout_marginBottom="12dp"
            android:text="@string/Question_3_Body" />

        <EditText
            android:id="@+id/Text_Field"
            style="@style/Text_Field_Design"
            android:layout_marginBottom="16dp"
            android:inputType="textCapSentences" />

        <TextView
            android:id="@+id/Answer_3"
            style="@style/Answer_Text"
            />

        <TextView
            style="@style/Question_Header"
            android:text="@string/Question_4_Heading" />

        <TextView
            style="@style/Question_Body"
            android:text="@string/Question_4_Body" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/Option_One_Button"
                style="@style/Radio_Button_Design"
                android:text="@string/Question_4_RadioButton_1" />

            <RadioButton
                android:id="@+id/Option_Two_Button"
                style="@style/Radio_Button_Design"
                android:text="@string/Question_4_RadioButton_2" />

            <RadioButton
                android:id="@+id/Option_Three_Button"
                style="@style/Radio_Button_Design"
                android:layout_marginBottom="16dp"
                android:text="@string/Question_4_RadioButton_3" />

        </RadioGroup>

        <TextView
            android:id="@+id/Answer_4"
            style="@style/Answer_Text"
            />

        <Button
            android:id="@+id/submit"
            style="@style/Button_Design"
            android:onClick="submitAnswers" />

    </LinearLayout>
</ScrollView>